<resources>
    <string name="app_name">BitTodo</string>

    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string name="list_dialog_title">Dynamic Update</string>

    <string name="func_dialog_title">Function</string>

    <string-array name="list_dialog_items">
        <item>Change week start with sun</item>
        <item>Change week start with mon</item>
        <item>Change week start with sat</item>
        <item>Change select mode：single/default</item>
        <item>Change month and week view with CustomView</item>
        <item>MonthViewShowMode：all</item>
        <item>MonthViewShowMode：only_current</item>
        <item>MonthViewShowMode：fix</item>
    </string-array>

    <string-array name="func_dialog_items">
        <item>Expand CalendarLayout</item>
        <item>Shrink CalendarLayout</item>
        <item>scrollToPre</item>
        <item>scrollToNext</item>
        <item>scrollToCurrent</item>
        <item>Limit calendar range</item>
        <item>Show range</item>
    </string-array>


    <string name="flyme">Flyme</string>
    <string name="flyme_desc">Meizu mobile phone calendar</string>

    <string name="custom_china">Beautiful Chinese style</string>
    <string name="custom_china_desc">Beautiful Chinese style custom</string>

    <string name="mix">Beautiful Mix style</string>
    <string name="mix_desc">Beautiful Mix style</string>

    <string name="full">Full screen style</string>
    <string name="full_desc">If you need a full screen calendar</string>

    <string name="range">Range selection</string>
    <string name="range_desc">Range selection style if you need</string>

    <string name="multi">Multiple selection</string>
    <string name="multi_desc">Multiple selection style if you need</string>

    <string name="colorful">Colorful style</string>
    <string name="colorful_desc">Everything what you need</string>

    <string name="view_pager">ViewPager style</string>
    <string name="view_pager_desc">ViewPager content </string>

    <string name="single">Radio style</string>
    <string name="single_desc">Radio style may be very popular</string>

    <string name="progress">Progress bar style</string>
    <string name="progress_desc">If you are developing a todo application</string>

    <string name="index">Subscript style</string>
    <string name="index_desc">Everything depends on how you draw</string>

    <string name="galaxy">Galaxy style</string>
    <string name="galaxy_desc">So easy to customize</string>

    <string name="simple">Simple style</string>
    <string name="simple_desc">Simple calendar</string>

    <string name="textview">TextView</string>
    <string name="today">Today</string>
    <string name="todolist">ToDoList</string>
    <string name="querydata">Query Data</string>
    <string name="adddata">Add Data</string>

    <string name="button_play">Resume</string>
    <string name="button_pause">Pause</string>
    <string name="button_reset">Reset</string>
    <string name="working_timer_option">Set working time</string>
    <string name="break_timer_option">Set break time</string>
    <string name="time">%1$s:%2$s</string>
    <string name="hour_time">%1$s:%2$s:%3$s</string>
    <string name="default_time">25:00</string>
    <string name="button_default">Start</string>
    <string name="set_alarm_sound">Set alarm sound</string>
    <string name="done_button">Set</string>
    <string name="hour_hint">Hours</string>
    <string name="minute_hint">Minutes</string>
    <string name="second_hint">Seconds</string>
    <string name="worker_icon">Worker</string>
    <string name="error_edit_text">Fields can\'t be all empty!</string>
    <string name="all_zeros">Fields can\'t be all zeros!</string>
    <string name="set_start_time">设置专注时长</string>
    <string name="set_break_time">设置休息时长</string>
    <string name="potato">potato</string>
    <string name="default_count">0</string>
    <string name="have_deleted" translatable="false">已删除任务</string>
    <string name="cancel" translatable="false">撤销</string>

    <string name="skip">跳过</string>

</resources>
