<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".Pomodoro.PomodoroActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="210dp"
        android:layout_height="197dp"
        android:layout_marginTop="48dp"
        android:fadeScrollbars="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/ic_circular"
        android:progressTint="#64AE70"
        android:rotation="270"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="252dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/default_time"
        android:textColor="#808A87"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569" />

    <ImageButton
        android:id="@+id/resetButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/ic_round_circle"
        android:backgroundTint="#bfbfbf"
        android:contentDescription="@string/button_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_stop_24" />

    <ImageButton
        android:id="@+id/resumePauseButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/ic_round_circle"
        android:backgroundTint="#bfbfbf"
        android:contentDescription="@string/button_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_play_arrow_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="170dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/forest"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="35dp"
        android:layout_height="44dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:text="@string/default_count"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.862"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:contentDescription="@string/potato"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.857"
        app:srcCompat="@drawable/potato" />

    <ImageView
        android:id="@+id/breaking"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        app:srcCompat="@drawable/breaking" />

    <ImageView
        android:id="@+id/working"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        app:srcCompat="@drawable/working" />

    <ImageView
        android:id="@+id/toWorkView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/working"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/toBreakView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breaking"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="73dp"
        android:layout_height="51dp"
        android:background="#707070"
        android:text="@string/skip"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom">
        <include layout="@layout/mynavibar"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>